# tongsim-agiuc-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/ability_action/: index.html
api/ability_asset/: index.html
api/ability_camera/: index.html
api/ability_collision_shape/: index.html
api/ability_consumable_energy/: index.html
api/ability_interactable/: index.html
api/ability_powerable/: index.html
api/ability_scene/: index.html
api/action_base/: index.html
api/action_impl/: index.html
api/core_world_context/: index.html
api/entity_base/: index.html
api/entity_mixin/: index.html
api/manager_pg/: index.html
api/manager_spatial/: index.html
api/tongsim/: index.html
api/type/: index.html
concepts/ability/: index.html
concepts/action/: index.html
concepts/camera/: index.html
concepts/context/: index.html
concepts/entity/: index.html
concepts/level/: index.html
concepts/overview/: index.html
concepts/pg/: index.html
concepts/pg_manager/: index.html
dev_guide/cli/: index.html
dev_guide/setup/: index.html
dev_guide/testing/: index.html
docs/: index.md
docs/api/: ability_action.md  ability_asset.md  ability_camera.md  ability_collision_shape.md  ability_consumable_energy.md  ability_interactable.md  ability_powerable.md  ability_scene.md  action_base.md  action_impl.md  core_world_context.md  entity_base.md  entity_mixin.md  manager_pg.md  manager_spatial.md  tongsim.md  type.md
docs/concepts/: ability.md  action.md  camera.md  context.md  entity.md  level.md  overview.md  pg.md  pg_manager.md
docs/dev_guide/: cli.md  setup.md  testing.md
docs/getting_started/: overview.md  python_sdk_installation.md  ubuntu_docker_installation.md  windows_client_installation.md
examples/entity/: destroy_entity.py  electric_appliance_control.py  get_aabb.py  query_entity.py  rotation.py
examples/image/: image_data_streaming.pyw
examples/level/: setup_scene.py  view.py
examples/pg/: query_pg_sample.py
examples/utils/: get_entity_id_in_view_frustum.py
extra/: terminal.css  tweaks.css
scripts/: set_version.py
search/: search_index.json
src/tongsim/: __init__.py  (+3 more)
tests/: conftest.py
(+79 files in other folders)
